
  o Declare linearHypothesis.survreg() method, previously omitted from NAMESPACE (following question by Robert Dinterman); tweaks to survreg methods for linearHypothesis(), Anova(), and deltaMethod() to make them more robust.
  
  o Fix bug in hccm() when model matrix includes just one column (reported by Justin Yap).
  
  o Fix buglet in scatterplotMatrix.formula() when groups specified.
  
  o Small changes to docs.

Changes to Version 3.0-8

  o Import() now defaults to stringsAsFactors=FALSE to match the default behavior of read.table() as of R 4.0.0.
  
  o New strings2factors() function to convert character variables in a data frame to factors.
  
  o Added data.frame method for S().
  
  o Fixed a bug in estimateTransform.lm() that returned the correct answer with an unneeded warning.
  
  o Fixed Anova.coxph() to handle weights properly (problem reported by Daniel Morillo Cuadrado).

Changes to Version 3.0-7

  o Fixed boxCox(), powerTransform() to work when 'car' package is not attached
  
  o Fixed Anova() to work with "lme" models without an intercept (to fix bug reported by Benjamin Tyner).

Changes to Version 3.0-6

  o Explicitly import utils::globalVariables() (suggestion of Vince Carey).

Changes to Version 3.0-5

  o Change class(x) == "y" to inherits(x, "y") throughout code (thanks to Martin Maechler).

Changes to Version 3.0-4

  o Scoping improvements to deltaMethod(), which now also takes an optional hypothesized value; contribution and suggestion by Pavel Krivitsky.
  
  o Make Anova() work for coxph() models with strata (following problem reported by Susan Galloway Hilsenbeck).
  
  o Modify carPalette() to provide a colorblind-friendly palette as an option (suggestion of Sercan Kahveci).
  
  o Small improvements.

Changes to Version 3.0-3

  o Fixed a bug in mmp.glm, so the horizontal axis for the default plot is the linear predictor, not the fitted values.  
